tests/errors/array/zero_length_array_index_out_of_bounds_errors.sim

        fn f() {
          a: [i64; 0];
          r: &mut i64;
          entry:
            r = &mut a[0i64];
            return
        }
        